--- a/index.html
+++ b/index.html
@@ -12,74 +12,78 @@
 
   <main>
     <section class="playlist-container">
-      <h2>Best of NCS - No Copyright Sounds</h2>
-      <ul class="playlist">
-        <!-- Repeat this block for each song -->
-        <li class="song">
-          <button class="song-btn" data-src="songs/1.mp3" data-title="On & On - Cartoon, Daniel Levi">
-            <img src="icons/1.webp" alt="NCS Icon" class="icon">
-            <span class="title">On & On - Cartoon, Daniel Levi</span>
-            <span class="duration">02:50 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/2.mp3" data-title="Invincible - DEAF KEV">
-            <img src="icons/2.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Invincible - DEAF KEV</span>
-            <span class="duration">03:04 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/3.mp3" data-title="Mortals - Warriyo, Laura Brehm">
-            <img src="icons/3.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Mortals - Warriyo, Laura Brehm</span>
-            <span class="duration">03:50 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/4.mp3" data-title="Shine - Spektrem">
-            <img src="icons/2.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Shine - Spektrem</span>
-            <span class="duration">02:58 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/5.mp3" data-title="Why We Lose - Cartoon, Coleman Trapp">
-            <img src="icons/4.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Why We Lose - Cartoon, Coleman Trapp</span>
-            <span class="duration">03:15 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/6.mp3" data-title="Sky High - Elektromonia">
-            <img src="icons/5.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Sky High - Elektromonia</span>
-            <span class="duration">03:40 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/7.mp3" data-title="Symbolism - Electro-Light">
-            <img src="icons/2.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Symbolism - Electro-Light</span>
-            <span class="duration">03:00 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/8.mp3" data-title="Heroes Tonight - Janji, Johnning">
-            <img src="icons/2.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Heroes Tonight - Janji, Johnning</span>
-            <span class="duration">02:45 ►</span>
-          </button>
-        </li>
-        <li class="song">
-          <button class="song-btn" data-src="songs/9.mp3" data-title="Feel Good - Syn Cole">
-            <img src="icons/6.jpg" alt="NCS Icon" class="icon">
-            <span class="title">Feel Good - Syn Cole</span>
-            <span class="duration">02:59 ►</span>
-          </button>
-        </li>
-      </ul>
-    </section>
+        <h2>Best of NCS - No Copyright Sounds</h2>
+        <div class="playlist-wrapper">
+            <ul class="playlist">
+                <!-- Repeat this block for each song -->
+                <li class="song">
+                  <button class="song-btn" data-src="songs/1.mp3" data-title="On & On - Cartoon, Daniel Levi">
+                    <img src="icons/1.webp" alt="NCS Icon" class="icon">
+                    <span class="title">On & On - Cartoon, Daniel Levi</span>
+                    <span class="duration">02:50 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/2.mp3" data-title="Invincible - DEAF KEV">
+                    <img src="icons/2.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Invincible - DEAF KEV</span>
+                    <span class="duration">03:04 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/3.mp3" data-title="Mortals - Warriyo, Laura Brehm">
+                    <img src="icons/3.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Mortals - Warriyo, Laura Brehm</span>
+                    <span class="duration">03:50 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/4.mp3" data-title="Shine - Spektrem">
+                    <img src="icons/2.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Shine - Spektrem</span>
+                    <span class="duration">02:58 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/5.mp3" data-title="Why We Lose - Cartoon, Coleman Trapp">
+                    <img src="icons/4.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Why We Lose - Cartoon, Coleman Trapp</span>
+                    <span class="duration">03:15 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/6.mp3" data-title="Sky High - Elektromonia">
+                    <img src="icons/5.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Sky High - Elektromonia</span>
+                    <span class="duration">03:40 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/7.mp3" data-title="Symbolism - Electro-Light">
+                    <img src="icons/2.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Symbolism - Electro-Light</span>
+                    <span class="duration">03:00 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/8.mp3" data-title="Heroes Tonight - Janji, Johnning">
+                    <img src="icons/2.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Heroes Tonight - Janji, Johnning</span>
+                    <span class="duration">02:45 ►</span>
+                  </button>
+                </li>
+                <li class="song">
+                  <button class="song-btn" data-src="songs/9.mp3" data-title="Feel Good - Syn Cole">
+                    <img src="icons/6.jpg" alt="NCS Icon" class="icon">
+                    <span class="title">Feel Good - Syn Cole</span>
+                    <span class="duration">02:59 ►</span>
+                  </button>
+                </li>
+          </ul>
+          <div class="side-image"></div>
+        </div>
+      </section>
+
   </main>
 
   <footer>
